# v2board

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.frontend  Dockerfile.rust  Makefile  README.md  docker-compose.local.yml  readme.md
backend/rust/: ARCHITECTURE.md  Cargo.toml  deny.toml
backend/rust/.cargo/: audit.toml
backend/rust/clickhouse-migrations/: 0001_schema_migration.sql  0002_traffic_reported.sql  0002_traffic_reported_v1.sql  0003_traffic_accounted.sql  0003_traffic_accounted_v1.sql  0004_installation_binding.sql  0004_reported_retry_dedup.sql  0005_accounted_retry_dedup.sql  0005_traffic_reported_daily.sql  0005_traffic_reported_daily_v1.sql  0006_reported_batch_index.sql  0006_traffic_accounted_daily.sql  0006_traffic_accounted_daily_v1.sql  0007_accounted_batch_index.sql  0007_retention_binding.sql  0008_materialize_reported_batch_index.sql  0009_materialize_accounted_batch_index.sql  0010_installation_binding.sql  0011_traffic_reported_daily_v1.sql  0012_traffic_accounted_daily_v1.sql  0013_retention_binding.sql
backend/rust/crates/analytics/: Cargo.toml
backend/rust/crates/analytics/src/: admission.rs  client.rs  event.rs  lib.rs  outbox.rs  projection.rs  reader.rs  schema.rs
backend/rust/crates/analytics/tests/: clickhouse_roundtrip.rs  outbox_roundtrip.rs
backend/rust/crates/api/: Cargo.toml
backend/rust/crates/api-contract/: Cargo.toml
backend/rust/crates/api-contract/src/: admin_business.rs  admin_codes.rs  admin_platform.rs  admin_servers.rs  auth.rs  commerce.rs  common.rs  configuration.rs  content.rs  lib.rs  operations.rs  patch.rs  problem.rs  time.rs  user.rs  user_activity.rs  user_commerce.rs
backend/rust/crates/api/src/: admin.rs  admin_order_adapters.rs  admin_user_adapters.rs  audit.rs  auth.rs  cli.rs  client.rs  codec.rs  commerce.rs  dialect.rs  fallback.rs  frontend.rs  golden_wire.rs  i18n.rs  json_value.rs  locale.rs  localization.rs  main.rs  metrics.rs  rate_limit.rs  request_params.rs  route_paths.rs  routes.rs  runtime.rs  server_api.rs  server_management_adapters.rs  server_runtime_adapters.rs  service_usage_adapters.rs  statistics_adapters.rs  subscription.rs  subscription_adapters.rs  telegram.rs  telegram_adapters.rs  ticket.rs  ticket_adapters.rs  validation.rs
backend/rust/crates/application/: Cargo.toml
backend/rust/crates/application/src/: account.rs  admin_order.rs  admin_user.rs  audit.rs  auth.rs  configuration.rs  content.rs  error.rs  filter_dsl.rs  giftcard.rs  invite.rs  lib.rs  logs.rs  maintenance.rs  operator_access.rs  order.rs  order_jobs.rs  payment.rs  plan.rs  promotion.rs  reconciliation.rs  server_management.rs  server_runtime.rs  service_usage.rs  statistics.rs  subscription.rs  system_monitoring.rs  telegram.rs  ticket.rs  worker_mail.rs  worker_statistics.rs  worker_traffic.rs
backend/rust/crates/application/tests/: dependency_direction.rs
backend/rust/crates/auth-adapters/: Cargo.toml
backend/rust/crates/auth-adapters/src/: cache.rs  external.rs  lib.rs  operator_access.rs  password.rs  session_cleanup.rs
backend/rust/crates/auth-adapters/tests/: redis_auth_cache.rs
backend/rust/crates/compat/: Cargo.toml
backend/rust/crates/compat/src/: error.rs  json.rs  lib.rs  pagination.rs  problem.rs  response.rs  security.rs
backend/rust/crates/config/: Cargo.toml
backend/rust/crates/config/src/: app_config.rs  clock.rs  (+9 more)
backend/rust/crates/configuration-adapters/: Cargo.toml
backend/rust/crates/contract/: Cargo.toml  build.rs
backend/rust/crates/db/: Cargo.toml  build.rs
backend/rust/crates/domain/: Cargo.toml
backend/rust/crates/domain-model/: Cargo.toml
backend/rust/crates/http-adapters/: Cargo.toml
backend/rust/crates/lifecycle/: Cargo.toml
backend/rust/crates/mail-adapters/: Cargo.toml
backend/rust/crates/order-adapters/: Cargo.toml
backend/rust/crates/payment-adapters/: Cargo.toml
backend/rust/crates/problem-code/: Cargo.toml
backend/rust/crates/provision/: Cargo.toml
backend/rust/crates/redis-adapters/: Cargo.toml
backend/rust/crates/server-adapters/: Cargo.toml
backend/rust/crates/subscription-adapters/: Cargo.toml
backend/rust/crates/telemetry/: Cargo.toml
backend/rust/crates/workers/: Cargo.toml
backend/rust/migrations/: 0001_initial.sql  0002_auth_hardening.sql  0003_worker_idempotency.sql  0004_traffic_report_sha256.sql  0005_normalize_giftcard_redemptions.sql  0006_durable_mail_outbox.sql  0007_index_payment_pending_orders.sql  0008_drop_retired_redis_traffic_ledger.sql  0009_traffic_quota_epoch.sql  0010_business_invariants.sql  0011_payment_reconciliation.sql  0012_relational_integrity.sql  0013_traffic_report_epoch.sql  0014_coupon_code_unique.sql  0015_giftcard_code_unique.sql  0016_invite_code_invariants.sql  0017_payment_driver_uuid_unique.sql  0018_ticket_open_invariants.sql  0019_ticket_message_index.sql  0020_node_credentials.sql  0021_seed_node_credentials.sql  0022_order_relational_integrity.sql  0023_plan_group_integrity.sql  0024_user_relational_integrity.sql  0025_giftcard_plan_integrity.sql  0026_invite_user_integrity.sql  0027_ticket_user_integrity.sql  0028_ticket_message_integrity.sql  0029_giftcard_redemption_user_integrity.sql  0030_traffic_report_user_integrity.sql  0031_stat_user_index.sql  0032_shadowsocks_group_json.sql  0033_vmess_group_json.sql  0034_trojan_group_json.sql  0035_tuic_group_json.sql  0036_hysteria_group_json.sql  0037_vless_group_json.sql  0038_anytls_group_json.sql  0039_v2node_group_json.sql  0040_archive_payment_methods.sql  (+3 more)
backend/rust/migrations-postgres/: 0001_initial.sql  0002_giftcard_provenance_and_analytics_admission.sql  0002_import_finalize.sql  0002_legacy_lifecycle_and_analytics_admission.sql  0003_audit_log.sql  0003_operator_config_authority.sql  0004_admin_mfa.sql  0005_admin_rbac.sql
backend/rust/scripts/: run-bare-metal-fault-matrix-supervisor.sh  run-exact-ignored-test.sh
backend/rust/test-fixtures/: legacy-mysql-reader.sql  legacy-mysql-seed.sql
backend/rust/test-fixtures/legacy-fault-matrix/: README.md  cleanup-guest.sh
(+1466 files in other folders)
