[workspace]
members = [
  "crates/api",
  "crates/analytics",
  "crates/compat",
  "crates/config",
  "crates/contract",
  "crates/db",
  "crates/domain",
  "crates/lifecycle",
  "crates/provision",
  "crates/workers",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/v2board/v2board"
rust-version = "1.97.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1.0.103"
arc-swap = "1.9.2"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = ["serde"] }
cron = "0.17.0"
crc32fast = "1.5.0"
csv = "1.4.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures-util = "0.3.32"
getrandom = "0.4.3"
hex = "0.4.3"
hmac = "0.13.0"
indexmap = { version = "2.12.0", features = ["serde"] }
ipnet = "2.12.0"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls", "rustls-platform-verifier", "aws-lc-rs", "pool"] }
md5 = "0.8.1"
openssl = "0.10.81"
percent-encoding = "2.3.2"
quick-xml = { version = "0.41.0", features = ["serialize"] }
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "connection-manager", "script"] }
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rmp-serde = "1.3.1"
rust_decimal = { version = "1.42.1", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
serde_urlencoded = "0.7.1"
# Pure-safe YAML 1.2 parser/serializer for operator-provided Clash/Stash
# overrides. It avoids the archived unsafe-libyaml chain; compatibility is
# guarded by subscription round-trip and rendered-contract tests.
serde-saphyr = "0.0.29"
sha1 = "0.11.0"
sha2 = "0.11.0"
subtle = "2.6.1"
tar = { version = "0.4.46", default-features = false }
# PostgreSQL is the only native runtime datastore. MySQL support exists only in
# the disposable lifecycle importer (and its legacy-source fixture); it is never
# linked into the API, worker, or analytics long-running runtime.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "json", "chrono", "rust_decimal", "uuid", "macros", "migrate"] }
clickhouse = { version = "0.15.1", default-features = false, features = ["lz4", "rustls-tls", "uuid", "chrono"] }
syn = { version = "2.0.117", features = ["full", "visit"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync", "fs"] }
tower-http = { version = "0.7.0", features = ["compression-br", "compression-gzip", "cors", "fs", "limit", "request-id", "sensitive-headers", "timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.4", features = ["v4"] }
url = "2.5.8"
