[package]
name = "v2board-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clickhouse.workspace = true
chrono.workspace = true
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
v2board-config = { version = "0.9.0", path = "../config" }

[[bin]]
name = "v2board-analytics-schema"
path = "src/bin/schema.rs"
