[package]
name = "v2board-api-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
v2board-problem-code = { version = "0.9.0", path = "../problem-code" }

[[bin]]
name = "v2board-export-openapi"
path = "src/bin/export_openapi.rs"
