[package]
name = "v2board-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
hmac.workspace = true
md5.workspace = true
redis.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
v2board-compat = { path = "../compat" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
v2board-domain = { path = "../domain" }
