[package]
name = "v2board-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
indexmap.workspace = true
ipnet.workspace = true
md5.workspace = true
percent-encoding.workspace = true
quick-xml.workspace = true
redis.workspace = true
regex.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde-saphyr.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
v2board-analytics = { version = "0.1.0", path = "../analytics" }
v2board-compat = { version = "0.1.0", path = "../compat" }
v2board-config = { version = "0.1.0", path = "../config" }
v2board-db = { version = "0.1.0", path = "../db" }
v2board-domain = { version = "0.1.0", path = "../domain" }

[dev-dependencies]
tower.workspace = true
