[package]
name = "v2board-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
csv.workspace = true
hex.workspace = true
indexmap.workspace = true
ipnet.workspace = true
md5.workspace = true
opentelemetry.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
quick-xml.workspace = true
redis.workspace = true
regex.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde-saphyr.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
url.workspace = true
v2board-analytics = { path = "../analytics" }
v2board-application = { path = "../application" }
v2board-auth-adapters = { path = "../auth-adapters" }
v2board-api-contract = { path = "../api-contract" }
v2board-compat = { path = "../compat" }
v2board-configuration-adapters = { path = "../configuration-adapters" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
v2board-domain-model = { path = "../domain-model" }
v2board-http-adapters = { path = "../http-adapters" }
v2board-server-adapters = { path = "../server-adapters" }
v2board-subscription-adapters = { path = "../subscription-adapters" }
v2board-mail-adapters = { path = "../mail-adapters" }
v2board-order-adapters = { path = "../order-adapters" }
v2board-payment-adapters = { path = "../payment-adapters" }
v2board-redis-adapters = { path = "../redis-adapters" }
v2board-telemetry = { path = "../telemetry" }
