[package]
name = "v2board-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Infrastructure-independent V2Board application use cases and outbound ports"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
v2board-domain-model = { version = "0.9.0", path = "../domain-model" }
