[package]
name = "v2board-auth-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Production PostgreSQL, Redis, cryptography, HTTP, and mail adapters for authentication"

[lints]
workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
bcrypt.workspace = true
chrono.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
lettre.workspace = true
md5.workspace = true
openssl.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha1.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
v2board-application = { path = "../application" }
v2board-compat = { path = "../compat" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
v2board-http-adapters = { path = "../http-adapters" }
v2board-mail-adapters = { path = "../mail-adapters" }
v2board-subscription-adapters = { path = "../subscription-adapters" }
