[package]
name = "v2board-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
indexmap.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
v2board-problem-code = { path = "../problem-code" }
