[package]
name = "v2board-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
crc32fast.workspace = true
dotenvy.workspace = true
ipnet.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
