[package]
name = "v2board-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
crc32fast.workspace = true
dotenvy.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
