[package]
name = "v2board-configuration-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Production operator configuration, SMTP, Telegram, and bulk-mail adapters"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
lettre.workspace = true
openssl.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
v2board-application = { path = "../application" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
v2board-http-adapters = { path = "../http-adapters" }
v2board-mail-adapters = { path = "../mail-adapters" }
