[package]
name = "v2board-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
md5.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
syn.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { version = "0.1.0", path = "../analytics" }
v2board-compat = { version = "0.1.0", path = "../compat" }
v2board-config = { version = "0.1.0", path = "../config" }
v2board-db = { version = "0.1.0", path = "../db" }
v2board-domain = { version = "0.1.0", path = "../domain" }
