[package]
name = "v2board-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
md5.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
syn.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { version = "0.9.0", path = "../analytics" }
v2board-application = { version = "0.9.0", path = "../application" }
v2board-auth-adapters = { version = "0.9.0", path = "../auth-adapters" }
v2board-api-contract = { version = "0.9.0", path = "../api-contract" }
v2board-compat = { version = "0.9.0", path = "../compat" }
v2board-configuration-adapters = { version = "0.9.0", path = "../configuration-adapters" }
v2board-config = { version = "0.9.0", path = "../config" }
v2board-db = { version = "0.9.0", path = "../db" }
v2board-domain-model = { version = "0.9.0", path = "../domain-model" }
v2board-mail-adapters = { version = "0.9.0", path = "../mail-adapters" }
v2board-order-adapters = { version = "0.9.0", path = "../order-adapters" }
v2board-redis-adapters = { version = "0.9.0", path = "../redis-adapters" }
v2board-payment-adapters = { version = "0.9.0", path = "../payment-adapters" }
v2board-server-adapters = { version = "0.9.0", path = "../server-adapters" }
