[package]
name = "v2board-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
md5.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
syn.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { path = "../analytics" }
v2board-application = { path = "../application" }
v2board-auth-adapters = { path = "../auth-adapters" }
v2board-api-contract = { path = "../api-contract" }
v2board-compat = { path = "../compat" }
v2board-configuration-adapters = { path = "../configuration-adapters" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
v2board-domain-model = { path = "../domain-model" }
v2board-mail-adapters = { path = "../mail-adapters" }
v2board-order-adapters = { path = "../order-adapters" }
v2board-redis-adapters = { path = "../redis-adapters" }
v2board-payment-adapters = { path = "../payment-adapters" }
v2board-server-adapters = { path = "../server-adapters" }
