[package]
name = "v2board-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
log.workspace = true
md5.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
thiserror.workspace = true
uuid.workspace = true
v2board-domain-model = { version = "0.9.0", path = "../domain-model" }

[dev-dependencies]
tokio.workspace = true
