[package]
name = "v2board-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
log.workspace = true
md5.workspace = true
hex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
thiserror.workspace = true
uuid.workspace = true
v2board-application = { path = "../application" }
v2board-analytics = { path = "../analytics" }
v2board-domain-model = { path = "../domain-model" }

[dev-dependencies]
tokio.workspace = true
