[package]
name = "v2board-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
bcrypt.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
md5.workspace = true
openssl.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
v2board-compat = { path = "../compat" }
v2board-config = { path = "../config" }
v2board-db = { path = "../db" }
