[package]
name = "v2board-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
bcrypt.workspace = true
chrono.workspace = true
csv.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
lettre.workspace = true
md5.workspace = true
openssl.workspace = true
quick-xml.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
v2board-compat = { version = "0.1.0", path = "../compat" }
v2board-config = { version = "0.1.0", path = "../config" }
v2board-db = { version = "0.1.0", path = "../db" }

[dev-dependencies]
indexmap.workspace = true
