[package]
name = "v2board-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
real-stack-e2e = ["dep:v2board-db"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
hex.workspace = true
percent-encoding.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["mysql", "postgres"] }
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { version = "0.9.0", path = "../analytics" }
v2board-config = { version = "0.9.0", path = "../config" }
v2board-configuration-adapters = { version = "0.9.0", path = "../configuration-adapters" }
v2board-db = { version = "0.9.0", path = "../db", optional = true }
v2board-domain-model = { version = "0.9.0", path = "../domain-model" }
v2board-payment-adapters = { version = "0.9.0", path = "../payment-adapters" }
v2board-provision = { version = "0.9.0", path = "../provision" }
v2board-redis-adapters = { version = "0.9.0", path = "../redis-adapters" }

[[example]]
name = "real_stack_e2e_bootstrap"
required-features = ["real-stack-e2e"]
