[package]
name = "v2board-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
real-stack-e2e = ["dep:v2board-db"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clickhouse.workspace = true
futures-util.workspace = true
hex.workspace = true
percent-encoding.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["mysql", "postgres"] }
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { path = "../analytics" }
v2board-config = { path = "../config" }
v2board-configuration-adapters = { path = "../configuration-adapters" }
v2board-db = { path = "../db", optional = true }
v2board-domain-model = { path = "../domain-model" }
v2board-payment-adapters = { path = "../payment-adapters" }
v2board-provision = { path = "../provision" }
v2board-redis-adapters = { path = "../redis-adapters" }

[[example]]
name = "real_stack_e2e_bootstrap"
required-features = ["real-stack-e2e"]
