[package]
name = "v2board-order-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime composition, clock, policy, and identifiers for order use cases"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
v2board-application = { version = "0.9.0", path = "../application" }
v2board-config = { version = "0.9.0", path = "../config" }
v2board-db = { version = "0.9.0", path = "../db" }
v2board-payment-adapters = { version = "0.9.0", path = "../payment-adapters" }
