[package]
name = "v2board-payment-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Payment provider catalog and encrypted configuration adapters"

[lints]
workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
md5.workspace = true
openssl.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
v2board-application = { path = "../application" }
v2board-compat = { path = "../compat" }
v2board-config = { path = "../config" }
v2board-http-adapters = { path = "../http-adapters" }
