[package]
name = "v2board-provision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-config = { version = "0.1.0", path = "../config" }
v2board-db = { version = "0.1.0", path = "../db" }
