[package]
name = "v2board-provision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
# Compiles the destructive bare-metal fault harness into a dedicated matrix
# binary. Production binaries never enable this feature and therefore contain
# neither the controller nor calls to its injection hooks.
bare-metal-fault-matrix = []

[dependencies]
hex.workspace = true
hmac.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
redis.workspace = true
rust_decimal.workspace = true
clickhouse.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["mysql", "postgres"] }
thiserror.workspace = true
tar.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { version = "0.1.0", path = "../analytics" }
v2board-config = { version = "0.1.0", path = "../config" }
v2board-db = { version = "0.1.0", path = "../db" }
v2board-domain = { version = "0.1.0", path = "../domain" }
