[package]
name = "v2board-provision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
flate2.workspace = true
hex.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tar.workspace = true
url.workspace = true
v2board-config = { version = "0.1.0", path = "../config" }
