[package]
name = "v2board-redis-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared Redis admission and runtime verification adapters"

[lints]
workspace = true

[dependencies]
redis.workspace = true
thiserror.workspace = true
v2board-config = { version = "0.9.0", path = "../config" }
