[package]
name = "v2board-server-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Server-node credential and runtime infrastructure adapters"

[lints]
workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
v2board-application = { path = "../application" }
v2board-domain-model = { path = "../domain-model" }
