[package]
name = "v2board-subscription-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Method-aware subscription-link token and Redis minting adapters"

[lints]
workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
redis.workspace = true
sha1.workspace = true
uuid.workspace = true
v2board-compat = { path = "../compat" }
v2board-config = { path = "../config" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
