[package]
name = "v2board-workers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
chrono.workspace = true
cron.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
redis.workspace = true
sentry.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
v2board-analytics = { version = "0.9.0", path = "../analytics" }
v2board-application = { version = "0.9.0", path = "../application" }
v2board-config = { version = "0.9.0", path = "../config" }
v2board-configuration-adapters = { version = "0.9.0", path = "../configuration-adapters" }
v2board-db = { version = "0.9.0", path = "../db" }
v2board-domain-model = { version = "0.9.0", path = "../domain-model" }
v2board-mail-adapters = { version = "0.9.0", path = "../mail-adapters" }
v2board-order-adapters = { version = "0.9.0", path = "../order-adapters" }
v2board-payment-adapters = { version = "0.9.0", path = "../payment-adapters" }
v2board-redis-adapters = { version = "0.9.0", path = "../redis-adapters" }
